--- a/DemoAngularJava/frontend/src/app/menu/menu.component.html
+++ b/DemoAngularJava/frontend/src/app/menu/menu.component.html
@@ -3,16 +3,16 @@
     <div><a href="" class="navbar-brand">Raushan's Resume</a></div>
 
     <ul class="navbar-nav ">
-      <li><a routerLink="/home" class="nav-link">Home</a></li>
-      <li><a routerLink="/project" class="nav-link">Project</a></li>
+      <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/home" class="nav-link">Home</a></li>
+      <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/project" class="nav-link">Project</a></li>
       <!-- <li><a routerLink="/login" class="nav-link">Internship</a></li>
       <li><a routerLink="" class="nav-link">About</a></li>
       <li><a routerLink="" class="nav-link">Contact</a></li> -->
     </ul>
 
     <ul class="navbar-nav navbar-collapse justify-content-end">
-      <li><a routerLink="/login" class="nav-link">login</a></li>
-      <li><a routerLink="/logout" class="nav-link">logout</a></li>
+      <li><a *ngIf="!hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/login" class="nav-link">login</a></li>
+      <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/logout" class="nav-link">logout</a></li>
     </ul>
   </nav>
 </header>
